--- a/Coffee Machine/Brush up your code/task-info.yaml
+++ b/Coffee Machine/Brush up your code/task-info.yaml
@@ -382,6 +382,9 @@ files:
         }
     }
   learner_created: true
+- name: src/machine/CoffeeMachineOff.java
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/33/stages/180/implement
 status: Solved
 record: -1
